--- a/index.html
+++ b/index.html
@@ -400,10 +400,9 @@
                 <h3>Donc l'accessibilité numérique, c'est quoi ?</h3>
 
                 <p class="dcube-quote">
-                   Il s’agit de rendre l’information et le contenu du site
-                  utilisables pour les personnes handicapées quelque soit la
-                  nature du handicap et quelque soit la façon dont c’est
-                  consulté.
+                   C'est la capacité pour toute personne de lire, de comprendre
+                  et d'utiliser correctement, pleinement et sans blocage les
+                  sites digitaux.
                 </p>
               </div>
             </div>
