--- a/index.html
+++ b/index.html
@@ -2268,7 +2268,7 @@
                 <ul class="dcube-text-tiny">
                   <li>
                     <a
-                      href="https://www.numerique.gouv.fr/publications/rgaa-accessibilite/"
+                      href="https://accessibilite.numerique.gouv.fr/"
                       target="_blank"
                       title="Consulter le site Référentiel général d'amélioration de l'accessibilité (RGAA) - nouvelle fenêtre"
                       >Référentiel général d'amélioration de l'accessibilité
@@ -2332,7 +2332,7 @@
                   <ul>
                     <li>
                       <a
-                        href="https://www.numerique.gouv.fr/publications/rgaa-accessibilite/methode-rgaa/criteres/"
+                        href="https://accessibilite.numerique.gouv.fr/methode/criteres-et-tests/"
                         target="_blank"
                         title="Critères RGAA - Nouvelle fenêtre"
                         >Critères RGAA</a
@@ -2403,15 +2403,6 @@
                     réalisation d’un certain nombre de tests automatiques
                     (accessible depuis l'inspecteur de code dans l'onglet «
                     Accessibility Audit »)
-                  </p>
-                  <p>
-                    <a
-                      href="https://www.numerique.gouv.fr/publications/rgaa-accessibilite/methode/criteres/"
-                      target="_blank"
-                      title="Méthodologie de tests RGAA - Nouvelle fenêtre"
-                      >Méthodologie de tests RGAA</a
-                    ><br />La direction interministérielle du numérique (DINUM)
-                    met à disposition la méthologie de tests RGAA
                   </p>
                   <p>
                     <a
