ajout élement sur tabindex

--- a/index.html
+++ b/index.html
@@ -1382,6 +1382,10 @@
                         élément focusable car cela <b>nuit</b> à l'ordre naturel
                         de la navigation au clavier
                       </li>
+                      <li>
+                        Ne pas mettre le tabindex sur les zones comportant du
+                        texte (titre, paragraphe, etc.)
+                      </li>
                     </ul>
                   </div>
                 </div>
