--- a/index.html
+++ b/index.html
@@ -1595,7 +1595,7 @@
                   <div class="dcube-block">
                     <p>
                       L'attribut <strong>role</strong> permet à l'utilisateur ou
-                      l'utilisatrice du lecteur d'écran de s'orinter vers les
+                      l'utilisatrice du lecteur d'écran de s'orienter vers les
                       zones importantes d'une page web et à naviguer rapidement
                       vers ces zones au sein d'un site web.
                     </p>
@@ -2395,7 +2395,7 @@
                     >
                     <br />
                     tests automatiques ou assistés pour l'ensemble des tests du
-                    RGAA 3.
+                    RGAA 3 et RGAA 4.
                   </p>
                   <p>
                     <a
