update qr codes & slides

--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
                 </p>
                 <p class="dcube-couv_subtitle">Emmanuelle ABOAF</p>
                 <p class="dcube-couv_details dcube-color-c5">
-                  Codeurs en seine 2022 – 17 novembre 2022
+                  BDX IO – 2 décembre 2022
                 </p>
               </div>
             </div>
@@ -2221,7 +2221,17 @@
                       mobilier urbain, ce sera à partir du 23 juin 2021.
                     </li>
                   </ul>
-
+                  <p class="font-small">
+                    <a
+                      href="http://cncph.fr/report-2027/"
+                      title="Décision unilatérale du gouvernement de reporter à 2027
+                      l’échéance d’accessibilité des sites internet publics :
+                      réaction du CNCPH - Nouvelle fenêtre"
+                      >Décision unilatérale du gouvernement de reporter à 2027
+                      l’échéance d’accessibilité des sites internet publics :
+                      réaction du CNCPH</a
+                    >
+                  </p>
                   <p class="dcube-border-t1 dcube-border-c4">
                     <strong>Pour le secteur privé</strong>,
                   </p>
@@ -2532,12 +2542,31 @@
                     >
                   </p>
                 </div>
-                <div class="dcube-margin-t15">
-                  <p>Posez vos questions sur Slido :</p>
-                  <img
-                    alt="Code-barre pour poser vos questions"
-                    src="img_slide/dcube/qrcode_slido.png"
-                  />
+                <div style="display: flex">
+                  <div class="dcube-margin-t15 col-1-2">
+                    <p class="center">Posez vos questions</p>
+                    <a
+                      href="https://app.sli.do/event/tP9S7g2YqdfdxcG7Qhwm2x/live/questions"
+                      title="Posez vos questions"
+                    >
+                      <img
+                        alt="Code-barre pour poser vos questions"
+                        src="img_slide/dcube/qrcode_slido.png"
+                      />
+                    </a>
+                  </div>
+                  <div class="dcube-margin-t15 col-1-2">
+                    <p class="center">Donnez vos feedbacks</p>
+                    <a
+                      href=" https://openfeedback.io/r46KviPgLYMQfQnFpaGS/2022-10-31/543"
+                      title="Donnez vos feedbacks"
+                    >
+                      <img
+                        alt="Code-barre pour donner vos feedbacks"
+                        src="img_slide/dcube/qrcode_openfeedback.png"
+                      />
+                    </a>
+                  </div>
                 </div>
               </div>
             </div>
