--- a/index.html
+++ b/index.html
@@ -1145,7 +1145,13 @@
                     </div>
                     <p class="alignleft dcube-margin-t15">
                       Si le lien ouvre une nouvelle fenêtre, il est important de
-                      le préciser.
+                      le <b>préciser</b>.
+                    </p>
+                    <p class="alignleft">
+                      Si le libellé de votre lien est explicite, n'utilisez pas
+                      le
+                      <code>title</code> sinon l'information est
+                      <b>redondante</b>.
                     </p>
                   </div>
                 </div>
